<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AccessBS</string>
    <string name="action_settings">Settings</string>
    <string name="txtStart">START</string>
    <string name="txtEnd">END</string>
    <string name="txtSite">SITE_№</string>
    <string name="title_activity_input">Ввод и исправление</string>
    <string name="txtWork">Номер работы</string>
    <string name="txtClear">Стереть</string>
    <string name="txtInput">Ввести</string>
    <string name="txtCancel">Отмена</string>
    <string name="txtAddress">№ Сайта</string>
    <string name="txtSent">sent</string>
    <string name="txtAbout">О программе</string>
    <string name="starAbout">AccessBS \n© Анваров Раис \n2014 (Оренбург) \ne-mail: ra7@bk.ru</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="txtQuit">Выход</string>
    <string name="txtYes">Да</string>
    <string name="txtNo">Нет</string>
    <string name="txtLog">Log-файл</string>
    <string name="title_activity_Log">Log-файл</string>
    <string name="txtDeleteLog">Удалить Log</string>

</resources>
