<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="3dp" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btDeleteLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="1"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button101"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="1"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button201"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="1"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="2"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button102"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="2"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button202"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="2"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="3"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button103"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="3"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button203"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="3"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="4"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button104"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="4"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button204"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="4"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="5"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button105"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="5"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button205"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="5"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="6"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button106"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="6"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button206"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="6"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="7"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button107"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="7"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button207"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="7"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="8"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button108"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="8"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button208"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="8"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="9"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button109"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="9"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button209"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="9"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="10"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button110"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="10"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button210"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="10"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="11"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="11"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button211"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="11"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableLeft="@drawable/ic_action_paste"
                android:onClick="butSiteClick"
                android:tag="12"
                android:text="@string/txtSite" />

            <ToggleButton
                android:id="@+id/Button112"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butStartClick"
                android:tag="12"
                android:textOff="@string/txtStart"
                android:textOn="@string/txtSent" />

            <ToggleButton
                android:id="@+id/Button212"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_off_on"
                android:onClick="butEndClick"
                android:tag="12"
                android:textOff="@string/txtEnd"
                android:textOn="@string/txtSent" />
        </TableRow>
    </TableLayout>

</ScrollView>